--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,17 @@
         <link rel="stylesheet" href="css/bulma.min.css">
     </head>
     <body>
-    
+        <div class="container is-fluid">
+
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <div id="app"></div>
-        <script src="https://unpkg.com/react@16.8.6/umd/react.production.min.js"></script>
-        <script src="https://unpkg.com/react-dom@16.7.0/umd/react-dom.production.min.js"></script>
-        <script src="js/app.js"></script>
+            <![endif]-->
+            <div class="columns">
+                <div id="app"></div>
+            </div>
+            <script src="https://unpkg.com/react@16.8.6/umd/react.production.min.js"></script>
+            <script src="https://unpkg.com/react-dom@16.7.0/umd/react-dom.production.min.js"></script>
+            <script src="js/app.js"></script>
+        </div>
     </body>
 </html>
