--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,8 @@
         <![endif]-->
         
         <div id="app">
-            
+            <!-- content goes here from app -->
         </div>
-        <script src="https://unpkg.com/react@16.7.0/umd/react.production.min.js"></script>
-        <script src="https://unpkg.com/react-dom@16.7.0/umd/react-dom.production.min.js"></script>
-        <script src="js/app.js"></script>
+        <script src="/bundle.js"></script>
     </body>
 </html>
